--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,12 @@ stages:
     jobs:
       - job: DeployToVM
         steps:
-          - checkout: self
+          - checkout: none
           - script: |
+              echo "Trayendo los cambios..."
+              cd /home/azureuser/pacientes/
+              git pull
+
               echo "Construyendo imágenes Docker..."
               cd /home/azureuser/
               docker-compose build
