Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,12 @@ stages:
               cd /home/azureuser/pacientes/
               git pull
 
+              cd /home/azureuser/pruebas/
+              git pull
+
+              cd /home/azureuser/informes/
+              git pull
+
               echo "Construyendo imágenes Docker..."
               cd /home/azureuser/
               docker-compose build
